@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-03
+2012-02-06 Andy Salnikov
+- cspad.MiniElementV1 was renamed to cspad2x2.ElementV1, updating client code.
+
 2012-01-19 Andy Salnikov
 Tag: V00-00-02
 	in CSPadPixSpectra.h moved typedefs inside class declaration,
